{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "c4038b0b-2efd-4b5a-a8b7-8a5c273364ea",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "d3b0e882-086a-4bf5-ac4d-fb87fff14de5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateXPositive",
                    "type": "Button",
                    "id": "c5f166b2-aedc-4581-a969-d7f165b9986a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateYPositive",
                    "type": "Button",
                    "id": "60c5e8d4-7228-4ec5-9ee4-00408e8199ca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateZPositive",
                    "type": "Button",
                    "id": "0af3c050-f7fb-4128-b5dd-3413d5c0fea2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceBlock",
                    "type": "Button",
                    "id": "c8e91685-22b6-4599-8dca-62f798227574",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateXNegative",
                    "type": "Button",
                    "id": "6a008be4-6b19-43f7-81fb-6ffbb9a406fa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateYNegative",
                    "type": "Button",
                    "id": "04d4e014-366e-443c-8f92-015e04194e8d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateZNegative",
                    "type": "Button",
                    "id": "bef73991-5e6b-44f1-999c-d20632513946",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0e18ca5-f551-4df3-a086-a1108a39de4b",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dd68e5c-e49b-484b-9f61-ab77442fc2c0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateXPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d81d816b-36e0-4bce-9502-94c983470008",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateYPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "135b4d1d-0e87-4e32-9dbc-888e94f694ec",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateZPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b107a2c4-a539-4d52-ab36-f32dda9bf594",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3f53523-30f5-4caa-af44-e1b65f37fc6a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateXNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39789123-bcb0-4557-872e-0ee77aaa47a5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateYNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a2909bb-1bb4-4176-906a-2f7daf13b08c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateZNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}